Bug 89520 - Crash inserting index
Summary: Crash inserting index
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: Other All
: high major
Assignee: Tobias Lippert
URL:
Whiteboard: target:4.5.0 target:4.4.2
Keywords: bibisected, bisected, haveBacktrace, regression
: 89400 89779 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-02-21 07:39 UTC by Matthew Francis
Modified: 2015-12-17 08:47 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
console bt with master sources (5.30 KB, text/plain)
2015-02-21 09:03 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Francis 2015-02-21 07:39:03 UTC
Split from investigation on bug 89432
Reproduced in Ubuntu 14.04 / LO 4.4.0.3 and 4.5 master

Steps to reproduce
1. Load attachment 113461 [details]
2. Open  Insert - Indexes and Tables - Indexes and Tables
3. Click "OK"

Expected result
- Index is inserted

Actual result
- A fatal error dialog containing the text "vector::_M_range_check"
- (later) The above error dialog appears briefly, then LO crashes
Comment 1 Matthew Francis 2015-02-21 07:41:52 UTC
Setting this to NEW myself as a commit has been identified.

The error dialog mentioned in comment 0 started as of the below commit. The additional crash appears to be a separate issue which I will raise a separate bug for.

Adding Cc: to drtl@fastmail.fm; Could you possibly take a look at this? Thanks


commit 9088a4c2d18f59c22fceb81829441b704603415d
Author: Tobias Lippert <drtl@fastmail.fm>
Date:   Fri Jun 6 00:04:24 2014 +0200

    fdo#30732 Retain selected character attributes for table of contents
    
    The text and selected attributes are copied from the source text node
    and added to the target node at the corresponding positions.
Comment 2 Julien Nabet 2015-02-21 09:03:19 UTC
Created attachment 113571 [details]
console bt with master sources

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this.
Comment 3 Tobias Lippert 2015-02-21 20:22:53 UTC
I will have a look into it. Thanks for providing the attachment to reproduce the bug, and for notifying me.
Comment 4 Matthew Francis 2015-02-22 00:10:43 UTC
Thanks for taking a look. The second part of the issue (the later crash) was raised as bug 89521 - as suspected that seems to trace back to a different commit
Comment 5 Tobias Lippert 2015-02-22 12:14:59 UTC
The error is a consequence of the previously reported problems in the log:
...
warn:legacy.osl:3964:1:sw/source/core/txtnode/thints.cxx:3210: +SwpHints::Insert: invalid hint, end < start
warn:legacy.osl:3964:1:sw/source/core/txtnode/thints.cxx:3210: +SwpHints::Insert: invalid hint, end < start
warn:legacy.osl:3964:1:sw/source/core/txtnode/thints.cxx:3210: +SwpHints::Insert: invalid hint, end < start
...

I will make my code more tolerant to work with invalid hints.
However, I cannot see where the invalid hints originate, and I cannot say what other errors will ensue from this.
Comment 6 Tobias Lippert 2015-02-22 13:00:07 UTC
I have submitted a patch for the master which is waiting for review here:
https://gerrit.libreoffice.org/14580
Comment 7 Commit Notification 2015-03-03 10:09:43 UTC
Tobias Lippert committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4bdbea5447f36beb9cc33df173a89a49a9918290

tdf#89520 Make TOX creation more robust

It will be available in 4.5.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-03-10 14:27:44 UTC
Tobias Lippert committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=09669c4f89ad5c4c012ba114811b49f7805e3801&h=libreoffice-4-4

tdf#89520 Make TOX creation more robust

It will be available in 4.4.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Matthew Francis 2015-03-19 16:44:05 UTC
*** Bug 89779 has been marked as a duplicate of this bug. ***
Comment 10 Caolán McNamara 2015-06-17 13:05:18 UTC
*** Bug 89400 has been marked as a duplicate of this bug. ***
Comment 11 Robinson Tryon (qubit) 2015-12-17 08:47:06 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]