tdf#89520 Make TOX creation more robust

The code is now more robust and will accept illegal arguments.

Change-Id: I43ae82b953cea845fb170aa7b6e8d42470ad4e5e
Reviewed-on: https://gerrit.libreoffice.org/14580
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit 4bdbea5447f36beb9cc33df173a89a49a9918290)
Signed-off-by: Michael Stahl <mstahl@redhat.com>